--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div id="dishes-list-container">
-        <div class="search-id">
+        <div>
             <input type="text" id="filter-input" placeholder="Filter dishes...">
             <button id="filter-btn">Filter</button>
         </div>
